--- a/FrontEnd/products.html
+++ b/FrontEnd/products.html
@@ -14,6 +14,9 @@
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+   <!-- Custom styles -->
+  <link href="css/styles.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -37,25 +40,27 @@
   </nav>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="container bg-white cnt-producto">
+    <br>
   	<div class="row">
   		<div class="col-lg-12">
-  			 <h3><b>Listado de productos por cliente</b></h3>
+  			 <h3><b><i>Listado de productos por cliente</i></b></h3>
   		</div>
   	</div>
-    <div class="row">
+    <br><br>
+    <div class="row rw-products">
       <div class="col-lg-4">
       	<div class="card h-100">
           <h4 class="card-header">Usuario: Alex</h4>
           <div class="card-body">
-            <p class="card-text" id=labels>
+            <p class="" id=labels>
 
             </p>
-
         </div>
       </div
       <br><br>
       <a href="index.html" class="btn btn-warning btn-block"> Cientes </a>
+      <br><br>
       </div>
       <div class="col-lg-8">
 
