--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,6 +13,9 @@
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Custom styles -->
+  <link href="css/styles.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -36,11 +39,11 @@
   </nav>
 
   <!-- Page Content -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-2"></div>
-      <div class="col-lg-6">
-        <h3 class="mt-5">Listado de clientes</h3>
+  <div class="container bg-white  cnt-clientes">
+    <div class="row rw-clientes">
+
+      <div class="col-lg-12">
+        <h4 class="mt-5 my-4"><b><i>Listado de clientes</i></b></h4>
         <p></p>
         <table class="table table-hover">
           <thead>
@@ -53,6 +56,7 @@
               <td align=center><b>familyName</b> </td>
               <td align=center><b>phone</b> </td>
               <td align=center><b>created_at</b> </td>
+              <td align=center><b>Ver</b> </td>
             </tr>
           </thead>
           <tbody  class="listClients">
@@ -61,15 +65,13 @@
         </table>
 
       </div>
-      <div class="col-lg-2"></div>
+
     </div>
   </div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <script>
 
@@ -102,6 +104,9 @@
               {
                  if ( key1 != 'enabled')
                     tabla += "<td>" + value1 + "</td>";
+
+                 if ( key1 == 'created_at')
+                    tabla += "<td><a href='products.html?id=" + cliente_id + "'>Productos</a></td>";
               }
 
               /*if ( key1 == 'givenName') tabla += "<td><a href='products.html?id=" + cliente_id +"'>" + value1 + "</a></td>";
