--- a/FrontEnd/products.html
+++ b/FrontEnd/products.html
@@ -64,7 +64,7 @@
       </div>
       <div class="col-lg-8">
 
-      	<table class="table table-hover">
+      	<table class="table table-hover table-sm">
       		<thead>
       			<tr>
       				<td align=center><b>id</b></td>
